# todo-django-example

./: README.md  manage.py  pyproject.toml
templates/: base.html  index.html
todo_list/: admin.py  apps.py  models.py  urls.py  views.py
todo_list/migrations/: 0001_initial.py
todo_list/templates/todo_list/: base.html  index.html  todoitem_detail.html  todoitem_list.html
todo_list/templates/todo_list/components/: todo_items_list.html
todo_manager_django/: asgi.py  settings.py  urls.py  wsgi.py
